# Chat_backend_fastapi

./: .env.example  .gitignore  README.md  logging_settings.conf  pyproject.toml  start.sh  startdev.sh
.github/: copilot-instructions.md
docs/: AI_PLAYBOOK.md  DEVELOPMENT_ENVIRONMENT.md  GCS_STORAGE.md  IMAGE_CONTEXT_EXPLANATION.md  LLM_PARAMETER_REASONING.md  LLM_TOOL_DECISION_GUIDE.md  PROXMOX_DEPLOYMENT.md  REFERENCE.md  SHELL_CONTROL_ISSUES.md  TIME_MANAGEMENT_ARCHITECTURE.md
docs/echo/: ALARM_MEMORY_CONSTRAINTS.md  ECHO_DEVICE_SETUP.md  ECHO_KIOSK_SETUP.md  README.md
scripts/: calendar_mcp_dev.sh  cloudflare_interactive.py  cloudflare_manager.py  deploy.sh  kill_port.py  mcp_profile.py  restart_servers.py
scripts/echo/: README.md  check_echo_memory.sh  monitor_echo_memory.sh  setup_echo.sh
src/backend/: __init__.py  app.py  config.py  logging_handlers.py  logging_settings.py  main.py  openrouter.py  repository.py
src/backend/admin/: app.js  index.html  (+1 more)
tests/: conftest.py  test_attachments.py  test_cashflow.py  test_chat_orchestrator.py  test_chat_orchestrator_env.py  test_chat_router.py  test_client_settings_service.py  test_client_tool_preferences.py  test_clients_router.py  test_conversation_logging.py  test_datetime_utils.py  test_filenames.py  test_logging_handlers.py  test_logging_settings.py  test_mcp_client.py  test_mcp_management.py  test_mcp_registry.py  test_mcp_server_settings.py  test_monarch_tools.py  test_openrouter_client.py  test_repository.py  test_schemas_chat.py  test_spotify_identifiers.py  test_streaming.py  test_title_service.py
(+74 files in other folders)
