[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "fastmcp>=2.14.1",
    "httpx[http2]>=0.27.2",
    "aiosqlite>=0.20.0",
    "mcp>=1.25.0",
    "pydantic-settings>=2.4.0",
    "psutil>=7.1.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.2",
    "rich>=13.0.0",
    "sse-starlette>=2.1.0",
    "uvicorn>=0.30.0",
    "websockets>=11.0",
    "python-dateutil>=2.8.2",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-cloud-storage>=2.17.0",
    "python-dotenv>=1.0.1",
    "monarchmoney>=0.1.12",
    "gql<3.5.0",
    "spotipy>=2.25.1",
    "deepgram-sdk>=5.3.2",
    "openai>=2.14.0",
    "azure-cognitiveservices-speech>=1.42.0",
]

[project.scripts]
backend = "backend.main:main"
mcp-profile = "scripts.mcp_profile:main"

[tool.setuptools]
packages = ["backend", "scripts"]

[tool.setuptools.package-dir]
"" = "src"
scripts = "scripts"
